--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -11,25 +11,20 @@
   box-shadow: 0 4px 16px #ccc;
   font-family: sans-serif;
   letter-spacing: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .form_title {
-  margin: 0 0 32px 15px;
+  margin: 0 0 25px 0;
   align-items: center;
 }
 .form_button {
-  padding: 10px 20px;
-  border: none;
   border-radius: 5px;
-  letter-spacing: 1px;
-  font-size: 16xp;
-  color: #fff;
   outline: none;
   cursor: pointer;
-  transition: 0.3s;
-  align-items: center;
-  display: flex;
-  margin: auto;
 }
+
 .form_input {
   width: 100%;
   padding: 0 0 10px 0;
@@ -37,4 +32,5 @@
   border-bottom: 1px solid #e0e0e0;
   background-color: transparent;
   outline: none;
+  margin: 0 0 25px 0;
 }
